[build-system]
requires = [
    "scikit-build-core>=0.4.5",
    "cmake>=3.18",
    "ninja",
]
build-backend = "scikit_build_core.build"

[project]
name = "ggml_python"
version = "0.0.8"
description = "Python bindings for ggml"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Andrei Betlen", email = "abetlen@gmail.com" },
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "typing_extensions>=4.6.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.scikit-build]
wheel.packages = ["ggml"]
wheel.expand-macos-universal-tags = true
cmake.verbose = true

[project.optional-dependencies]
test = ["pytest"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "pillow", "cairosvg"]
convert = [
    "accelerate==0.19.0",
    "numpy==1.24.3",
    "sentencepiece==0.1.98",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchvision==0.15.2",
    "transformers==4.29.2"
]

[project.urls]
Homepage = "https://github.com/abetlen/ggml-python"
Issues = "https://github.com/abetlen/ggml-python/issues"