[build-system]
requires = ["scikit-build-core[pyproject]>=0.5.1"]
build-backend = "scikit_build_core.build"

[project]
name = "ggml_python"
dynamic = ["version"]
description = "Python bindings for ggml"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Andrei Betlen", email = "abetlen@gmail.com" },
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "typing_extensions>=4.6.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.scikit-build]
wheel.packages = ["ggml"]
wheel.expand-macos-universal-tags = true
cmake.verbose = true
cmake.minimum-version = "3.21"
minimum-version = "0.5.1"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "ggml/__init__.py"

[tool.pytest.ini_options]
addopts = "--ignore=vendor"

[project.optional-dependencies]
test = ["pytest"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "pillow", "cairosvg"]
publish = ["build"]
convert = [
    "accelerate==0.19.0",
    "numpy==1.24.3",
    "sentencepiece==0.1.98",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchvision==0.15.2",
    "transformers==4.29.2"
]

[project.urls]
Homepage = "https://github.com/abetlen/ggml-python"
Documentation = "https://ggml-python.readthedocs.io/en/latest/"
Issues = "https://github.com/abetlen/ggml-python/issues"
