[build-system]
requires = ["scikit-build-core[pyproject]>=0.5.1"]
build-backend = "scikit_build_core.build"

[project]
name = "ggml_python"
dynamic = ["version"]
description = "Python bindings for ggml"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Andrei Betlen", email = "abetlen@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "typing_extensions>=4.6.3",
    "importlib_resources>=6.4.0; python_version < '3.9'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.scikit-build]
wheel.packages = ["ggml"]
wheel.py-api = "py3"
wheel.expand-macos-universal-tags = true
cmake.verbose = true
cmake.minimum-version = "3.21"
minimum-version = "0.5.1"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "ggml/__init__.py"

[tool.pytest.ini_options]
addopts = "--ignore=vendor"
testpaths = "tests"

[tool.ruff]
target-version = "py38"
extend-exclude = ["ggml/contrib/onnx.py", "tests/test_ggml_onnx.py"]

[tool.ruff.lint.per-file-ignores]
"ggml/__init__.py" = ["F403"]

[project.optional-dependencies]
test = ["pytest"]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "pillow",
    "cairosvg",
    "jupyter-server>=2",
    "jupyterlab-server>=2",
    "jupyterlite-core>=0.7.0,<0.8",
    "jupyterlite-pyodide-kernel>=0.7.0,<0.8",
]
publish = ["build"]
convert = [
    "accelerate==1.10.1",
    "numpy==2.1.0",
    "sentencepiece==0.2.1",
    "torch==2.3.0",
    "torchaudio==2.4.0",
    "torchvision==0.18.0",
    "transformers==4.41.2"
]
onnx = ["onnx==1.14.0"]
onnx-tests = [
    "numpy<2",
    "tabulate==0.9.0",
    "pytest-cov==4.1.0",
    "pytest-runner==6.0.0",
    "hypothesis[numpy]>=6.0.0",
    "onnxruntime==1.15.1",
]

[project.urls]
Homepage = "https://github.com/abetlen/ggml-python"
Documentation = "https://ggml-python.readthedocs.io/en/latest/"
Issues = "https://github.com/abetlen/ggml-python/issues"
